terraform/kubernetes/kubernetes.tf
resource "kubernetes_ingress_v1" "helloworld_agent_server" {
  metadata {
    name = local.server_username
    annotations = {
      "alb.ingress.kubernetes.io/healthcheck-path" = "/.well-known/agent-card.json"
      "alb.ingress.kubernetes.io/inbound-cidrs"    = "${join(",", [for s in var.inbound_cidrs_for_lbs : s])}"
      "alb.ingress.kubernetes.io/success-codes"    = "200,201,404"
    }
  }

  spec {
    default_backend {
      service {
        name = local.server_username
        port {
          number = 9999
        }
      }
    }

    rule {
      http {
        path {
          backend {
            service {
              name = local.server_username
              port {
                number = 9999
              }
            }
          }

          path      = "/"
          path_type = "Prefix"
        }
      }
    }
  }
  depends_on = [kubernetes_ingress_class_v1.alb, kubernetes_manifest.ingressclassparams_alb]
}

resource "kubernetes_config_map_v1" "helloworld_agent_server" {
  metadata {
    name = local.server_username
  }

  data = {
    OPENID_CONNECT_URL = "${data.terraform_remote_state.base.outputs.vault_endpoint}/v1/identity/oidc/provider/${vault_identity_oidc_provider.agent.name}/.well-known/openid-configuration"
    AGENT_URL          = "http://${kubernetes_ingress_v1.helloworld_agent_server.status.0.load_balancer.0.ingress.0.hostname}"
  }
}

resource "kubernetes_service_v1" "test_client" {
  metadata {
    name = "test-client"
    labels = {
      app = "test-client"
    }
    annotations = {
      "service.beta.kubernetes.io/load-balancer-source-ranges" = join(",", var.inbound_cidrs_for_lbs)
      "service.beta.kubernetes.io/aws-load-balancer-scheme"    = "internet-facing"
    }
  }

  spec {
    type = "LoadBalancer"

    port {
      port        = 80
      target_port = 9000
      protocol    = "TCP"
      name        = "http"
    }

    selector = {
      app = "test-client"
    }
  }
}

resource "kubernetes_config_map_v1" "test_client" {
  metadata {
    name = "test-client"
  }

  data = {
    BASE_URL = "http://${kubernetes_service_v1.test_client.status.0.load_balancer.0.ingress.0.hostname}"
  }
}
